data/test/method_as_function/negative/0007.js
const axios = require('axios');
axios.get('https://petstore.swagger.io/v2/pets', {
    params: {
        tags: [1],
        limit: 10
    }
});